<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">JustJava</string>
    <string name="name">Name</string>
    <string name="topping">Topping</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order_summary">Order summary</string>
    <string name="order">Order</string>
    <string name="thank_you">Thank You!</string>
    <string name="question_1">Add whipped cream? </string>
    <string name="question_2">Add chocolate? </string>
    <string name="total">Total: </string>
    <string name="warning">Something went wrong</string>
    <string name="order_for">Order for <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
</resources>
